--- a/index.html
+++ b/index.html
@@ -1,11 +1,376 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
+
 <body>
-    
+    <nav class="navigation">
+
+        <ul class="navigation__container">
+            <li class="navigation__item">
+                <a href="x" class="navigation__link"></a><img src="./images/LOGO.png" alt="">
+            </li>
+            <li class="navigation__item"><a href="x" class="navigation__link">Home</a></li>
+            <li class="navigation__item"><a href="x" class="navigation__link">Espectaculo</a></li>
+            <li class="navigation__item"><a href="x" class="navigation__link">Deportes</a></li>
+        </ul>
+
+    </nav>
+
+    <header class="header">
+
+        <div class="header__main">
+            <h1>Blog Afrianska</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure voluptas eum vitae dicta
+                corrupti qui veniam aut voluptatibus aperiam ipsa amet ea officia atque, itaque velit
+                maxime porro commodi ab!</p>
+        </div>
+    </header>
+
+    <main class="main">
+
+        <section class="main__search">
+            <input type="search" placeholder="Search Article">
+
+        </section>
+
+        <section class="main__popular">
+            <p>POPULAR</p>
+        </section>
+
+        <section class="main__newprincipal">
+
+            <article class="main__articlefirst">
+                <h1>Feugiat sodales at nullantellus.</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil eligendi ut maxime minus beatae
+                    distinctio accusamus eveniet magnam blanditiis facilis iure maiores, veritatis nesciunt quaerat
+                    totam? Rerum quos expedita minima.</p>
+
+                <section class="main__footarticle">
+                    <article class="main_footautor">
+                        <h3>Samantha Leuthex</h3>
+                        <p>May 5,3 min read</p>
+                    </article>
+                    <article class="main__footautor"><img src="./images/icon-save-1.png" alt=""></article>
+                    <article class="main__footautor"><img src="./images/icon-share-1.png" alt=""></article>
+                </section>
+
+            </article>
+            <article class="main__articlefirst"><img src="./images/img-post-1-1.png" alt=""></article>
+
+        </section>
+
+
+        <section>
+
+            <article class="main_newssecond">
+
+                <section>
+                    <img src="./images/img-post-2.png" alt="">
+                </section>
+                <section>
+                    <h4>Porta proin tellus sed pulvinar odio eu pulvinar.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos reiciendis nisi, quia, omnis
+                        accusantium sapiente ea vel assumenda quasi praesentium doloribus sint, velit doloremque.
+                        Officiis
+                        pariatur consequuntur sed velit ad!</p>
+                </section>
+                <section class="main__footarticle">
+                    <article class="main_footautor">
+                        <h3>Samantha Leuthex</h3>
+                        <p>May 5,3 min read</p>
+                    </article>
+                    <article class="main__footautor"><img src="./images/icon-save-1.png" alt=""></article>
+                    <article class="main__footautor"><img src="./images/icon-share-1.png" alt=""></article>
+                </section>
+
+            </article>
+
+
+
+            <article class="main_newssecond">
+
+                <section>
+                    <img src="./images/img-post-2.png" alt="">
+                </section>
+                <section>
+                    <h4>Porta proin tellus sed pulvinar odio eu pulvinar.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos reiciendis nisi, quia, omnis
+                        accusantium sapiente ea vel assumenda quasi praesentium doloribus sint, velit doloremque.
+                        Officiis
+                        pariatur consequuntur sed velit ad!</p>
+                </section>
+                <section class="main__footarticle">
+                    <article class="main_footautor">
+                        <h3>Samantha Leuthex</h3>
+                        <p>May 5,3 min read</p>
+                    </article>
+                    <article class="main__footautor"><img src="./images/icon-save-1.png" alt=""></article>
+                    <article class="main__footautor"><img src="./images/icon-share-1.png" alt=""></article>
+                </section>
+
+            </article>
+
+
+            <article class="main_newssecond">
+
+                <section>
+                    <img src="./images/img-post-2.png" alt="">
+                </section>
+                <section>
+                    <h4>Porta proin tellus sed pulvinar odio eu pulvinar.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos reiciendis nisi, quia, omnis
+                        accusantium sapiente ea vel assumenda quasi praesentium doloribus sint, velit doloremque.
+                        Officiis
+                        pariatur consequuntur sed velit ad!</p>
+                </section>
+                <section class="main__footarticle">
+                    <article class="main_footautor">
+                        <h3>Samantha Leuthex</h3>
+                        <p>May 5,3 min read</p>
+                    </article>
+                    <article class="main__footautor"><img src="./images/icon-save-1.png" alt=""></article>
+                    <article class="main__footautor"><img src="./images/icon-share-1.png" alt=""></article>
+                </section>
+
+            </article>
+
+
+        </section>
+
+
+
+
+    </main>
+
+
+    <div class="row justify-content-between mb-4">
+        <div class="col">
+
+            <img src="./images/img-post-2.png" alt="">
+            <h4>Porta proin tellus sed pulvinar odio eu pulvinar.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos reiciendis nisi, quia, omnis
+                accusantium sapiente ea vel assumenda quasi praesentium doloribus sint, velit doloremque.
+                Officiis
+                pariatur consequuntur sed velit ad!</p>
+            <div class="row">
+                <div class="col-8">
+                    <h3>Samantha Leuthex</h3>
+                    <p>May 5,3 min read</p>
+                </div>
+                <div class="col-2 d-flex align-items-center">
+                    <img src="./images/icon-save-1.png" alt="">
+
+                </div>
+                <div class="col-2 d-flex align-items-center">
+                    <img src="./images/icon-share-1.png" alt="">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col">
+            <img src="./images/img-post-3-1.png" alt="">
+            <h4>Non quan tortor, proin eu egestas scelerisque.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos reiciendis nisi, quia, omnis
+                accusantium sapiente ea vel assumenda quasi praesentium doloribus sint, velit doloremque.
+                Officiis
+                pariatur consequuntur sed velit ad!</p>
+            <div class="row">
+                <div class="col-8">
+                    <h3>Samantha Leuthex</h3>
+                    <p>May 5,3 min read</p>
+                </div>
+                <div class="col-2 d-flex align-items-center">
+                    <img src="./images/icon-save-1.png" alt="">
+                </div>
+                <div class="col-2 d-flex align-items-center">
+                    <img src="./images/icon-share-1.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <img src="./images/img-post-3-2.png" alt="">
+            <h4>Amet amet sed pharetra risus sit eget interdum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos reiciendis nisi, quia, omnis
+                accusantium sapiente ea vel assumenda quasi praesentium doloribus sint, velit doloremque.
+                Officiis
+                pariatur consequuntur sed velit ad!</p>
+            <div class="row">
+                <div class="col-8">
+                    <h3>Samantha Leuthex</h3>
+                    <p>May 5,3 min read</p>
+                </div>
+                <div class="col-2 d-flex align-items-center">
+                    <img src="./images/icon-save-1.png" alt="">
+                </div>
+                <div class="col-2 d-flex align-items-center">
+                    <img src="./images/icon-share-1.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    </section>
+
+    <section>
+
+        <div class="row">
+            <div class="col">
+                <p>SEE ALL POPULAR ARTICLE</p>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col">
+                <p>ALL ARTICLE</p>
+            </div>
+        </div>
+
+        <div class="row justify-content-between mb-2">
+            <div class="col-6">
+                <img src="./images/img-post-4.png" alt="">
+            </div>
+
+            <div class="col-6">
+                <h4>Massa eu in laorett enim augue vulputate nunc.</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum necessitatibus nostrum asperiores
+                    blanditiis tempora laborum rem quasi obcaecati, optio harum! Consequatur nihil corporis
+                    accusantium illo commodi deserunt esse mollitia quam!</p>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4>Samantha Leuthex</h4>
+                        <p>May 5,3 min read</p>
+                    </div>
+                    <div class="col-2 d-flex align-items-center">
+                        <img src="./images/icon-save-1.png" alt="">
+                    </div>
+                    <div class="col-2 d-flex align-items-center">
+                        <img src="./images/icon-share-1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-between mb-2">
+            <div class="col-6">
+                <img src="./images/img-post-5.png" alt="">
+            </div>
+
+            <div class="col-6">
+                <h4>Fleugiat a euismod arcu feugiat posuere morbi..</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum necessitatibus nostrum asperiores
+                    blanditiis tempora laborum rem quasi obcaecati, optio harum! Consequatur nihil corporis
+                    accusantium illo commodi deserunt esse mollitia quam!</p>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4>Samantha Leuthex</h4>
+                        <p>May 5,3 min read</p>
+                    </div>
+                    <div class="col-2 d-flex align-items-center">
+                        <img src="./images/icon-save-1.png" alt="">
+                    </div>
+                    <div class="col-2 d-flex align-items-center">
+                        <img src="./images/icon-share-1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-between mb-2">
+            <div class="col-6">
+                <img src="./images/img-post-6.png" alt="">
+            </div>
+
+            <div class="col-6">
+                <h4>Sociis purus pellentesque faucibus vitae et tells.</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum necessitatibus nostrum asperiores
+                    blanditiis tempora laborum rem quasi obcaecati, optio harum! Consequatur nihil corporis
+                    accusantium illo commodi deserunt esse mollitia quam!</p>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4>Samantha Leuthex</h4>
+                        <p>May 5,3 min read</p>
+                    </div>
+                    <div class="col-2 d-flex align-items-center">
+                        <img src="./images/icon-save-1.png" alt="">
+                    </div>
+                    <div class="col-2 d-flex align-items-center">
+                        <img src="./images/icon-share-1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-between mb-2">
+            <div class="col-6">
+                <img src="./images/img-post-7.png" alt="">
+            </div>
+
+            <div class="col-6">
+                <h4>Cursus feugiat mi pellentesque mauris sed eu.</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum necessitatibus nostrum asperiores
+                    blanditiis tempora laborum rem quasi obcaecati, optio harum! Consequatur nihil corporis
+                    accusantium illo commodi deserunt esse mollitia quam!</p>
+
+                <div class="row">
+                    <div class="col-8">
+                        <h4>Samantha Leuthex</h4>
+                        <p>May 5,3 min read</p>
+                    </div>
+                    <div class="col-2 d-flex align-items-center">
+                        <img src="./images/icon-save-1.png" alt="">
+                    </div>
+                    <div class="col-2 d-flex align-items-center">
+                        <img src="./images/icon-share-1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer>
+
+        <div class="row">
+            <div class="col">
+                <h3>Interested to woek with our team?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quo dignissimos veritatis
+                    repudiandae eligendi sapiente reiciendis et provident vel, architecto possimus expedita officia,
+                    debitis cum ab natus suscipit distinctio optio?</p>
+            </div>
+            <div class="col d-flex align-items-center justify-content-center mb-4">
+                <button type="button" class="btn btn-primary">Let's Talk</button>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col">Afrianska</div>
+            <div class="col">About US</div>
+            <div class="col">Follow US</div>
+        </div>
+
+        <div class="row">
+            <p>2019 @Afrianska All rights reserved</p>
+        </div>
+
+    </footer>
+
+
+
+
 </body>
+
 </html>
