Se construye los modulos

--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 </head>
 
 <body>
-    <nav class="navigation">
 
-        <ul class="navigation__container">
-            <li class="navigation__item">
-                <a href="x" class="navigation__link"></a><img src="./images/LOGO.png" alt="">
-            </li>
-            <li class="navigation__item"><a href="x" class="navigation__link">Home</a></li>
-            <li class="navigation__item"><a href="x" class="navigation__link">Espectaculo</a></li>
-            <li class="navigation__item"><a href="x" class="navigation__link">Deportes</a></li>
+    <!-- Cabecera de página -->
+    <header class="header">
+
+        <img src="./images/LOGO.png" alt="" class="header__logo">
+
+        <nav class="header__menu"></nav>
+        <ul class="header__containerItems">
+
+            <li class="header__item"><a href="x" class="header__link">Home</a></li>
+            <li class="header__item"><a href="x" class="header__link">Espectaculo</a></li>
+            <li class="header__item"><a href="x" class="header__link">Deportes</a></li>
         </ul>
 
-    </nav>
+        </nav>
+    </header>
 
     <header class="header">
 
