--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -16,28 +16,30 @@
 
         <img src="./images/LOGO.png" alt="" class="header__logo">
 
-        <nav class="header__menu"></nav>
-        <ul class="header__containerItems">
+        <nav class="header__menu">
+            <ul class="header__containerItems">
 
-            <li class="header__item"><a href="x" class="header__link">Home</a></li>
-            <li class="header__item"><a href="x" class="header__link">Espectaculo</a></li>
-            <li class="header__item"><a href="x" class="header__link">Deportes</a></li>
-        </ul>
+                <li class="header__item"><a href="x" class="header__link header--active">Home</a></li>
+                <li class="header__item"><a href="x" class="header__link">Espectaculo</a></li>
+                <li class="header__item"><a href="x" class="header__link">Deportes</a></li>
+            </ul>
 
         </nav>
     </header>
 
-    <header class="header">
+    <main class="main">
 
-        <div class="header__main">
-            <h1>Blog Afrianska</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure voluptas eum vitae dicta
+        <section class="main__portada">
+
+            <h1 class="main__content">Blog Afrianska</h1>
+            <p class="main__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure voluptas eum vitae dicta
                 corrupti qui veniam aut voluptatibus aperiam ipsa amet ea officia atque, itaque velit
                 maxime porro commodi ab!</p>
-        </div>
-    </header>
 
-    <main class="main">
+        </section>
+    </main>
+
+    <main class="main2">
 
         <section class="main__search">
             <input type="search" placeholder="Search Article">
